--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "npm": "^9.8.1",
     "react": "^18.2.0",
