--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "assert": "^2.0.0",
     "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "https-browserify": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "npm": "^9.8.1",
     "react": "^18.2.0",
@@ -26,6 +29,9 @@
     "redux-actions": "^3.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
