--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "npm": "^9.8.1",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
