#10 구글로그인, 로그아웃, jwt토큰 발급

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,8 @@ psd
 thumb
 sketch
 
+
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -162,6 +164,8 @@ sketch
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+
+.env
 
 # Local History for Visual Studio Code
 .history/
