--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@dabeng/react-orgchart": "^1.0.3",
+    "@material-ui/core": "^4.12.4",
     "@minoru/react-dnd-treeview": "^3.4.4",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,13 +17,17 @@
     "assert": "^2.0.0",
     "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
+    "dotenv": "^16.3.1",
+    "gapi-script": "^1.2.0",
     "https-browserify": "^1.0.0",
     "jwt-decode": "^3.1.2",
+    "loglevel": "^1.8.1",
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -39,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
