#6 회원 목록 리스트, 회원 정보수정 페이지 완료

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# prd 운영배포용 
+REACT_APP_BASIC_URL="http://localhost:8080/api"
+
 REACT_APP_GOOGLE_AUTH_CLIENT_ID= "831001732147-ggsjpv73kps8bchv2s8k85790qm3iv76.apps.googleusercontent.com"
 REACT_APP_GOOGLE_AUTH_SECRET_KEY= "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"
 
