--- a/.env
+++ b/.env
@@ -17,6 +17,6 @@ REACT_APP_KAKAO_AUTH_REDIRECT_URI80= "http://localhost:8080/api/oauth/kakao"
 REACT_APP_KAKAO_AUTH_REDIRECT_IN_URI30= "http://localhost:3000/login/oauth/kakao"
 REACT_APP_KAKAO_AUTH_REDIRECT_OUT_URI30= "http://localhost:3000/logout"
 
-REACT_APP_CHAT_BASE_URL = "ws://localhost:8080/ws-stomp"
+REACT_APP_CHAT_BASE_URL= "http://localhost:8080/chat"
 
 # REACT_APP_KAKAO_AUTH_REDIRECT_URI2= "http://localhost:8080/api/oauth/regist"
