--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-stomp": "^5.1.0",
+    "react-to-print": "^2.14.13",
     "react-treebeard": "^3.2.4",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
