--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@material-ui/core": "^4.12.4",
     "@minoru/react-dnd-treeview": "^3.4.4",
-    "@mui/icons-material": "^5.14.7",
-    "@mui/material": "^5.14.7",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "@react-oauth/google": "^0.11.1",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
@@ -51,6 +51,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-stomp": "^5.1.0",
+    "react-to-print": "^2.14.13",
     "react-treebeard": "^3.2.4",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
