--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "https-browserify": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "loglevel": "^1.8.1",
+    "moment": "^2.29.4",
     "npm": "^9.8.1",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
