--- a/.env
+++ b/.env
@@ -31,6 +31,6 @@ REACT_APP_KAKAO_AUTH_REDIRECT_OUT_URI30= "http://localhost:3000/logout"
 # REACT_APP_KAKAO_AUTH_REDIRECT_URI2= "http://localhost:8080/api/oauth/regist"
 
 # 채팅관련 요청
-REACT_APP_CHAT_BASE_URL= "http://localhost:8080/chat"
+# REACT_APP_CHAT_BASE_URL= "http://localhost:8080/chat"
 REACT_APP_USER_BASE_URL= "http://localhost:8080/user"
 
