--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "assert": "^2.0.0",
     "axios": "^1.5.0",
     "browserify-zlib": "^0.2.0",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "gapi-script": "^1.2.0",
     "https-browserify": "^1.0.0",
