--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # 로컬 개발용 
-REACT_APP_BASIC_URL="http://localhost:8080/api"
+REACT_APP_BASIC_URL="http://localhost:8080"
 REACT_APP_GOOGLE_AUTH_CLIENT_ID="831001732147-ggsjpv73kps8bchv2s8k85790qm3iv76.apps.googleusercontent.com"
 REACT_APP_GOOGLE_AUTH_SECRET_KEY="AIzaSyBvmCsalasbBKbJSqyzcTNYc4GNVzlrf6Q"
 REACT_APP_KAKAO_AUTH_REDIRECT_URI="http://localhost:3000"
