--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # prd 운영배포용 
-REACT_APP_BASIC_URL="http://localhost:8080"
+REACT_APP_BASIC_URL="http://highcare.coffit.today:8080"
 
 REACT_APP_GOOGLE_AUTH_CLIENT_ID="831001732147-ggsjpv73kps8bchv2s8k85790qm3iv76.apps.googleusercontent.com"
 REACT_APP_GOOGLE_AUTH_SECRET_KEY="AIzaSyBvmCsalasbBKbJSqyzcTNYc4GNVzlrf6Q"
