--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # ############################# prd 운영배포용 
-# REACT_APP_BASIC_URL="http://highcare.coffit.today:8080"
-# REACT_APP_BASIC_URL_FRONT="http://highcare.coffit.today:3000"
+REACT_APP_BASIC_URL="http://highcare.coffit.today:8080"
+REACT_APP_BASIC_URL_FRONT="http://highcare.coffit.today:3000"
 
 
 REACT_APP_GOOGLE_AUTH_CLIENT_ID="831001732147-ggsjpv73kps8bchv2s8k85790qm3iv76.apps.googleusercontent.com"
