--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ REACT_APP_USER_BASE_URL= "http://highcare.coffit.today:8080/user"
 # REACT_APP_KAKAO_AUTH_REDIRECT_OUT_URI30="http://localhost:3000/logout"
 
 # REACT_APP_CHAT_BASE_URL= "http://localhost:8080/chat"
-REACT_APP_USER_BASE_URL= "http://localhost:8080/user"
+# REACT_APP_USER_BASE_URL= "http://localhost:8080/user"
 
