--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,11 @@
 # 로컬 개발용 
-REACT_APP_BASIC_URL="http://highcare.coffit.today:8080"
+# REACT_APP_BASIC_URL="http://highcare.coffit.today:8080"
+REACT_APP_BASIC_URL="http://localhost:8080"
 REACT_APP_GOOGLE_AUTH_CLIENT_ID="831001732147-ggsjpv73kps8bchv2s8k85790qm3iv76.apps.googleusercontent.com"
 REACT_APP_GOOGLE_AUTH_SECRET_KEY="AIzaSyBvmCsalasbBKbJSqyzcTNYc4GNVzlrf6Q"
-REACT_APP_KAKAO_AUTH_REDIRECT_URI="http://highcare.coffit.today:3000"
+REACT_APP_KAKAO_AUTH_REDIRECT_URI="http://localhost:3000"
 REACT_APP_KAKAO_AUTH_CLIENT_ID="04a820b4a5fce35c8a4255e9e7fc794f"
-REACT_APP_KAKAO_AUTH_REDIRECT_URI80="http://highcare.coffit.today:8080/api/oauth/kakao"
-REACT_APP_KAKAO_AUTH_REDIRECT_IN_URI30="http://highcare.coffit.today:3000/login/oauth/kakao"
-REACT_APP_KAKAO_AUTH_REDIRECT_OUT_URI30="http://highcare.coffit.today:3000/logout"
+REACT_APP_KAKAO_AUTH_REDIRECT_URI80="http://localhost:8080/api/oauth/kakao"
+REACT_APP_KAKAO_AUTH_REDIRECT_IN_URI30="http://localhost:3000/login/oauth/kakao"
+REACT_APP_KAKAO_AUTH_REDIRECT_OUT_URI30="http://localhost:3000/logout"
 # REACT_APP_KAKAO_AUTH_REDIRECT_URI2= "http://highcare.coffit.today:8080/api/oauth/regist"
